--- a/ES1 TP1/nbproject/project.properties
+++ b/ES1 TP1/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=es1.tp1.ES1TP1
+main.class=Interface.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
